--- a/src/components/list/styles.module.scss
+++ b/src/components/list/styles.module.scss
@@ -10,6 +10,9 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 
+  .item {
+  }
+
   @media (min-width: vars.$breakpoint-medium) {
     grid-template-columns: repeat(6, 1fr);
   }
